<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:circle="http://schemas.android.com/apk/res/com.ob.workmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_rl_all_view"
    android:longClickable="true"
    android:background="@drawable/bg" >
    
     <!-- 屏幕测试区 -->
     <!--  <TextView 
        android:id="@+id/main_tv_screen_parameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_alignParentBottom="true"
        /> -->   

    <!-- 我是搜索区域————————————————————————————————————————— -->

    <com.ob.custom.view.ClearEditText
        android:id="@+id/main_edit_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dip"
        android:background="@drawable/transparent"
        android:padding="10dip"
        android:textColor="@android:color/white"
        android:visibility="invisible"
         />

    <ImageView
        android:id="@+id/main_iv_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/search_normal"
        android:contentDescription="@null"
        android:scaleType="matrix"
        android:layout_toRightOf="@id/main_edit_number"
        android:layout_alignBottom="@id/main_edit_number"
        android:visibility="invisible"
        />
   	<!-- 旋转区———————————————————————————————— -->
    <FrameLayout
        android:id="@+id/main_fl_circle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_edit_number" >

        <RelativeLayout
            android:id="@+id/main_rl_circle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.ob.custom.view.CircleLayout
                android:id="@+id/main_circle_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                circle:firstChildPosition="South"
                circle:isRotating="true"
                circle:rotateToCenter="true" >
                
                <com.ob.custom.view.CircleImageView
                    android:id="@+id/circle_plate"
                    circle:name="@string/plate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_plate" />

                <com.ob.custom.view.CircleImageView
                    android:id="@+id/circle_id"
                    circle:name="@string/id"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/icon_id" />

                <com.ob.custom.view.CircleImageView
                    android:id="@+id/circle_phone"
                    circle:name="@string/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_phone" />

                <com.ob.custom.view.CircleImageView
                    android:id="@+id/circle_weather"
                    circle:name="@string/weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_weather" />
                <!-- <com.ob.custom.view.CircleImageView
                    android:id="@+id/circle_tourism"
                    circle:name="@string/tourism"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_tourism" /> -->
            </com.ob.custom.view.CircleLayout>
            <TextView
                android:id="@+id/main_tv_zipcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>
    </FrameLayout>

    <!-- 旋转下面的提示view————————————————————————————————- -->
     <ProgressBar
        android:id="@+id/main_pb_circle"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="30dip"
        android:layout_height="30dip"
        android:layout_centerInParent="true"
        android:layout_below="@id/main_fl_circle"
        android:layout_marginTop="10dip"
         android:visibility="gone"/>

    <TextView
        android:id="@+id/main_tv_show_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/main_fl_circle"
        android:layout_alignRight="@id/main_fl_circle"
        android:layout_below="@id/main_fl_circle"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginTop="3dip"
        android:textColor="@android:color/white" />
        
     <!-- wheel选择器区—————————————————————————— -->
    <LinearLayout 
        android:id="@+id/main_ll_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="gone"
        >
        <kankan.wheel.widget.WheelView 
            android:id="@+id/wheel_province"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />
        <kankan.wheel.widget.WheelView 
            android:id="@+id/wheel_district"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/main_ll_plate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="gone"
        >
        <kankan.wheel.widget.WheelView 
            android:id="@+id/wheel_plate_province"
            android:layout_width="0dip"
            android:layout_weight="2"
            android:layout_height="match_parent"
            />
        <kankan.wheel.widget.WheelView 
            android:id="@+id/wheel_plate"
            android:layout_width="0dip"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            />
        <kankan.wheel.widget.WheelView 
            android:id="@+id/wheel_area"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
 
</RelativeLayout>